# cv-job-agent

./: .env.example  .gitignore  README.md  cv.example.md  install.sh  pyproject.toml  requirements.txt
.opencode/: mcp.json
.opencode/agents/: job-applier.md
scripts/: cv_mcp_server.py  pii-check.py
scripts/render/: template.html
skills/: cv-job-agent.md
